Fixed layout issues

--- a/stlying.css
+++ b/stlying.css
@@ -4,9 +4,10 @@
   padding: 0.3em;
   font-family: "Courier New", Courier, monospace;
   margin: 0px;
-  /* border: solid 1px black; */
 }
-
+#container {
+  background-color: #ffefbd;
+}
 header {
   background-image: url(Assets/WYG.jpeg);
   background-repeat: no-repeat;
@@ -54,6 +55,9 @@ input#submit-all {
 .card {
   flex: 1 1 35%;
   position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 p.card-text.top-card {
@@ -73,7 +77,6 @@ p.card-text.bot-card {
 
 .card-text {
   font-size: 35px;
-  font-weight: bolder;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   text-shadow: 3px 3px black;
 }
